# keepassx-gdrive

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  Install_Ubuntu.txt  README.md
share/translations/: keepassx_it.ts
src/: CMakeLists.txt  config-keepassx.h.cmake  main.cpp
src/autotype/: AutoType.cpp  AutoTypeSelectDialog.h
src/core/: Config.cpp  Config.h  Database.cpp  Database.h  DatabaseIcons.h  Entry.cpp  Entry.h  EntryAttributes.h  FilePath.cpp  FilePath.h  Group.cpp  Group.h  Metadata.cpp  Metadata.h  Tools.cpp  Tools.h  Translator.cpp  Translator.h  Uuid.cpp  Uuid.h  qsavefile.cpp  qsavefile.h  qsavefile_p.h
src/crypto/: Crypto.cpp  SymmetricCipherGcrypt.cpp
src/format/: KeePass1Reader.cpp  KeePass2Reader.cpp  KeePass2Reader.h  KeePass2XmlReader.cpp  KeePass2XmlReader.h  KeePass2XmlWriter.cpp  KeePass2XmlWriter.h
src/gdrive/: AuthCredentials.cpp  AuthCredentials.h  Errors.h  GDriveConstants.h  GDriveDatabaseSync.cpp  GDriveDatabaseSync.h  GDriveDatabaseSyncBase.cpp  GDriveDatabaseSyncBase.h  GDriveDatabaseSyncFactory.cpp  GDriveDatabaseSyncFactory.h  GDriveEntriesSync.cpp  GDriveEntriesSync.h  GDriveGroupsSync.cpp  GDriveGroupsSync.h  GDriveLoginPage.cpp  GDriveLoginPage.h  GDriveSyncObject.cpp  GDriveSyncObject.h  GdriveDatabase.cpp  GdriveDatabase.h  GoogleDriveApi.cpp  GoogleDriveApi.h  GoogleDriveDbSync.cpp  GoogleDriveDbSync.h  GoogleDriveSession.cpp  GoogleDriveSession.h  GoogleDriveTools.cpp  GoogleDriveTools.h  QueryEntry.cpp  QueryEntry.h  Singleton.h
src/gui/: AboutDialog.h  ChangeMasterKeyWidget.cpp  ChangeMasterKeyWidget.ui  Clipboard.cpp  DatabaseOpenWidget.cpp  DatabaseOpenWidget.h  DatabaseOpenWidget.ui  DatabaseOpenWidgetCloud.cpp  DatabaseOpenWidgetCloud.h  DatabaseOpenWidgetCloud.ui  DatabaseSettingsWidget.cpp  DatabaseWidget.h  (+21 more)
src/qtdrive/lib/: CMakeLists.txt  about_info.cpp  about_info.h  authorized_command.cpp  authorized_command.h  command.cpp  command.h  command_about.cpp  command_about.h  command_delete.cpp  command_delete.h  command_download_file.cpp  command_download_file.h  command_file_list.cpp  command_file_list.h  command_get.cpp  command_get.h  command_get_properties.cpp  command_get_properties.h  command_oauth2.cpp  command_oauth2.h  command_private.h  command_refresh_token.cpp  command_refresh_token.h  command_set_properties.cpp  command_set_properties.h  command_update.cpp  command_update.h  command_upload_file.cpp  command_upload_file.h  defines.h  drive_manager.cpp  drive_manager.h  fields.cpp  fields.h  file_info.cpp  file_info.h  session.cpp  session.h  tools.cpp  (+1 more)
src/qtdrive/test/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  options.h  options_dialog.cpp  options_dialog.h  options_dialog.ui
src/qtdrive/test/networkaccessmanagerproxy/: CMakeLists.txt  networkaccessmanagerproxy.cpp  networkaccessmanagerproxy.h  networkaccessviewer.cpp  networkaccessviewer.h
tests/: CMakeLists.txt  GDriveTestUtils.cpp  GDriveTestUtils.h  TestArgumentParser.h  TestDatabaseRemoteSync.cpp  TestDatabaseRemoteSync.h  TestDatabaseSync.cpp  TestDatabaseSync.h  TestGoogleDriveApi.cpp  TestGoogleDriveApi.h  TestQSaveFile.cpp  TestQSaveFile.h  TestSymmetricCipher.h  config-keepassx-tests.h.cmake  modeltest.h
tests/remotedrive/: CMakeLists.txt  TestCommand.cpp  TestCommand.h  TestDatabaseRemoteSync.cpp  TestDatabaseRemoteSync.h  TestDatabaseSync.cpp  TestDatabaseSync.h
tests/remotedrive/commands/: CMakeLists.txt
tests/remotedrive/commands/gdrive/: CMakeLists.txt  TestUploadDeleteCommand.cpp  TestUploadDeleteCommand.h
tests/remotedrive/helpers/: FakeCommand.cpp  FakeCommand.h  FakeCommandsFactoryImpl.cpp  FakeCommandsFactoryImpl.h  FakeRemoteDriveApi.cpp  FakeRemoteDriveApi.h
utils/: kdbx-extract.cpp
(+105 files in other folders)
